WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213173
REGRESSION(
r262994
): [GTK] More than 100 tests are failing
https://bugs.webkit.org/show_bug.cgi?id=213173
Summary
REGRESSION(r262994): [GTK] More than 100 tests are failing
Diego Pino
Reported
2020-06-13 14:02:30 PDT
Many tests started failing in GTK Release (Tests) build #14065 (
https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20%28Tests%29/builds/14065
)
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r262995%20(14065)/results.html
There are only two revisions in the build. I bisected the revisions and verified the failures started happening in
r262994
.
Attachments
Patch
(1.35 KB, patch)
2020-06-17 00:26 PDT
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Patch
(1.38 KB, patch)
2020-06-17 00:28 PDT
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2020-06-14 04:07:07 PDT
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug%20(Tests)/r263006%20(6439)/fast/loader/javascript-url-in-embed-crash-log.txt
STDERR: STDERR: warning: core file may not match specified executable file. STDERR: ASSERTION FAILED: WTF::isValidEnum<E>(WTF::enumToUnderlyingType<E>(enumValue)) STDERR: ../../Source/WebKit/Platform/IPC/Encoder.h(108) : void IPC::Encoder::encode(E) [with E = WebCore::PluginLoadClientPolicy; std::enable_if_t<std::is_enum<_Tp>::value>* <anonymous> = 0] STDERR: 1 0x7f70a743bb63 WTFCrash
David Kilzer (:ddkilzer)
Comment 2
2020-06-16 21:52:05 PDT
Sorry, just noticed this. Will look into it tomorrow. (Also forgot that GTK tests aren't run by EWS.)
David Kilzer (:ddkilzer)
Comment 3
2020-06-16 22:01:19 PDT
I wonder if we just need to provide a default initializer for WebCore::PluginInfo::clientLoadPolicy (and ::isApplicationPlugin while we're here): diff --git a/Source/WebCore/plugins/PluginData.h b/Source/WebCore/plugins/PluginData.h index 259e3dc847e..1ca828883cc 100644 --- a/Source/WebCore/plugins/PluginData.h +++ b/Source/WebCore/plugins/PluginData.h @@ -67,7 +67,7 @@ struct PluginInfo { Vector<MimeClassInfo> mimes; - bool isApplicationPlugin; + bool isApplicationPlugin { false }; - PluginLoadClientPolicy clientLoadPolicy; + PluginLoadClientPolicy clientLoadPolicy { PluginLoadClientPolicy::Undefined }; String bundleIdentifier; #if PLATFORM(MAC)
Diego Pino
Comment 4
2020-06-17 00:26:25 PDT
Created
attachment 402085
[details]
Patch
Diego Pino
Comment 5
2020-06-17 00:28:37 PDT
Created
attachment 402086
[details]
Patch
Diego Pino
Comment 6
2020-06-17 01:17:56 PDT
Committed
r263139
: <
https://trac.webkit.org/changeset/263139
>
Radar WebKit Bug Importer
Comment 7
2020-06-17 01:18:16 PDT
<
rdar://problem/64439668
>
Diego Pino
Comment 8
2020-06-17 01:18:59 PDT
Thank you David. Your patch fixed the regression (I run the tests locally to verify it).
David Kilzer (:ddkilzer)
Comment 9
2020-06-17 09:20:56 PDT
(In reply to Diego Pino from
comment #8
)
> Thank you David. Your patch fixed the regression (I run the tests locally to > verify it).
Great! Thanks for testing the fix and committing it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug