REGRESSION(r262994): [GTK] More than 100 tests are failing https://bugs.webkit.org/show_bug.cgi?id=213173

Unreviewed gardening.

Add default initialization for WebCore::PluginInfo::clientLoadPolicy and
WebCore::PluginInfo::isApplicationPlugin.

* plugins/PluginData.h:

Canonical link: https://commits.webkit.org/226070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263139 268f45cc-cd09-0410-ab3c-d52691b4dbfc